made some changes

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
 
         </div>
 
-        <h1 class="credit">created by <a href="#"> asma kuku</a> | all rights reserved.</h1>
+        <h1 class="credit">created by <a href="#"> Valentine</a> | all rights reserved.</h1>
 
     </div>
 
